<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccf2ff"
    tools:context=".activity_mainmenu">

    <Button
        android:id="@+id/button3"
        android:layout_width="416dp"
        android:layout_height="204dp"
        android:layout_marginTop="109dp"
        android:background="#77ac39"
        android:fontFamily="@font/seymour_one"
        android:text="@string/throw_something_away"
        android:textColor="#FBFBFB"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <Button
        android:id="@+id/button6"
        android:layout_width="418dp"
        android:layout_height="204dp"
        android:background="#77ac39"
        android:fontFamily="@font/seymour_one"
        android:text="@string/check_on_conrad"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="420dp"
        android:layout_height="204dp"
        android:background="#77ac39"
        android:fontFamily="@font/seymour_one"
        android:onClick="EnterUrl"
        android:text="@string/learn_more_about_composting"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="345dp"
        android:layout_height="80dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/seymour_one"
        android:text="@string/i_want_to"
        android:textAlignment="center"
        android:textColor="#77ac39"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>