<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccf2ff"
    android:shape="rectangle"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="397dp"
        android:layout_height="109dp"
        android:fontFamily="@font/seymour_one"
        android:text="@string/composty"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor=" #77ac39"
        android:textSize="51sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="215dp"
        android:layout_height="226dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="-20dp"
        android:contentDescription="@string/cloud1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/whitecloudtran" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="246dp"
        android:layout_height="235dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="243dp"
        android:contentDescription="@string/cloud1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.29000002"
        app:srcCompat="@drawable/whitecloudtran" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:layout_marginStart="164dp"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="24dp"
        android:background="#77AC39"
        android:contentDescription="@string/let_s_go"
        android:onClick="sendMessage"
        android:text="@string/let_s_go"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.096" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="416dp"
        android:layout_height="197dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="195dp"
        android:contentDescription="@string/buttonimage"
        android:tint="#77AC39"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.205"
        app:srcCompat="@drawable/button_tran" />

</androidx.constraintlayout.widget.ConstraintLayout>